--- a/scss/Layouts/_project.scss
+++ b/scss/Layouts/_project.scss
@@ -1,5 +1,4 @@
 .project {
-  overflow-x: visible;
   width: 80%;
   margin: 126px auto;
   &_title {
@@ -92,9 +91,9 @@
   .project {
     &_title {
       font-size: 28px;
+      line-height: 70px;
       span {
         font-size: 70px;
-        bottom: -16px;
       }
     }
 
@@ -136,9 +135,9 @@
 
     &_title {
       font-size: 24px;
+      line-height: 46px;
       span {
         font-size: 46px;
-        bottom: -8px;
       }
     }
 
