--- a/scss/Layouts/_resume.scss
+++ b/scss/Layouts/_resume.scss
@@ -1,5 +1,4 @@
 .resume {
-  overflow-x: visible;
   @extend %widthCenter;
   padding-top: 96px;
   background-color: $white;
@@ -183,9 +182,9 @@ hr {
       }
       &_title {
         font-size: 24px;
+        line-height: 54px;
         span {
           font-size: 54px;
-          bottom: -12px;
         }
       }
     }
@@ -224,9 +223,9 @@ hr {
 
       &_title {
         font-size: 28px;
+        line-height: 90px;
         span {
           font-size: 90px;
-          bottom: -26px;
         }
       }
     }
@@ -267,6 +266,7 @@ hr {
 
       &_title {
         font-size: 24px;
+        line-height: 46px;
       }
     }
 
@@ -274,7 +274,6 @@ hr {
       &_title {
         span {
           font-size: 46px;
-          bottom: -8px;
         }
       }
     }
